# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  spec.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
