[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.12.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
config = "0.15.19"
uuid = { version = "1.19.0", features= ["v4"] }
chrono = "0.4.42"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2.0"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "runtime-async-std",
    "tls-rustls-aws-lc-rs"
]

[dev-dependencies]
reqwest = "0.12.28"
once_cell = "1"
